# detox

./: Cargo.toml
.github/workflows/: rust.yml
src/: detoxer.rs  main.rs
tests/: cli.rs
